plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

java {
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.3.RELEASE'
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.2.0'
	implementation 'org.projectlombok:lombok:1.18.32'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok:1.18.32'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	testImplementation 'org.springframework.boot:spring-boot-starter-test' // Includes JUnit 5
	testImplementation 'org.mockito:mockito-core:5.11.0'                   // Core Mockito
	testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'          // Mockito with JUnit 5

	testImplementation 'org.projectlombok:lombok:1.18.32'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'

}

tasks.named('test') {
	useJUnitPlatform();
	jvmArgs '-XX:+EnableDynamicAgentLoading'
}

